@@ -1,3 +1,7 @@
+Fri Oct 11 18:12:47 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* ext/objspace/gc_hook.c: prohibit reentrant.
+
 Fri Oct 11 18:11:34 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_trace.c (rb_postponed_job_flush): fix bit operation.
